--- a/Gui4SmallData/src/application/GuiView.fxml
+++ b/Gui4SmallData/src/application/GuiView.fxml
@@ -2,7 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -73,6 +76,23 @@
             <Label fx:id="systemLabel" alignment="CENTER" layoutX="100.0" layoutY="218.0" prefWidth="200.0" />
          </children>
       </Pane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+      <AnchorPane fx:id="page2" prefHeight="300.0" prefWidth="400.0" visible="false">
+         <children>
+            <ImageView fx:id="user1Image" fitHeight="150.0" fitWidth="200.0" layoutX="45.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Data/user1.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="user2Image" fitHeight="150.0" fitWidth="200.0" layoutX="255.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Data/user2.png" />
+               </image>
+            </ImageView>
+            <ProgressBar fx:id="user1Hp" layoutX="60.0" layoutY="85.0" prefWidth="70.0" progress="1.0" />
+            <ProgressBar fx:id="user2Hp" layoutX="270.0" layoutY="85.0" prefWidth="70.0" progress="1.0" />
+            <Button layoutX="173.0" layoutY="30.0" mnemonicParsing="false" onAction="#page2TestBtn" text="test" />
+            <Label fx:id="user1Log" alignment="CENTER" layoutX="80.0" layoutY="62.0" prefWidth="30.0" text=""/>
+            <Label fx:id="user2Log" alignment="CENTER" layoutX="290.0" layoutY="62.0" prefWidth="30.0" text=""/>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
